nerva_libwallet2_api_c/src/main/cpp/nerva_wallet2_api_c.h

//     virtual void addRow(const std::string &label) = 0;
extern ADDAPI void NERVA_SubaddressAccount_addRow(void* subaddressAccount_ptr, const char* label);
//     virtual void setLabel(uint32_t accountIndex, const std::string &label) = 0;
extern ADDAPI void NERVA_SubaddressAccount_setLabel(void* subaddressAccount_ptr, uint32_t accountIndex, const char* label);
//     virtual void refresh() = 0;
extern ADDAPI void NERVA_SubaddressAccount_refresh(void* subaddressAccount_ptr);
// };

// struct MultisigState {
//     MultisigState() : isMultisig(false), isReady(false), threshold(0), total(0) {}

//     bool isMultisig;
extern ADDAPI bool NERVA_MultisigState_isMultisig(void* multisigState_ptr);
//     bool isReady;
extern ADDAPI bool NERVA_MultisigState_isReady(void* multisigState_ptr);
//     uint32_t threshold;
extern ADDAPI uint32_t NERVA_MultisigState_threshold(void* multisigState_ptr);
//     uint32_t total;
extern ADDAPI uint32_t NERVA_MultisigState_total(void* multisigState_ptr);
// };


// struct DeviceProgress {
//     DeviceProgress(): m_progress(0), m_indeterminate(false) {}
//     DeviceProgress(double progress, bool indeterminate=false): m_progress(progress), m_indeterminate(indeterminate) {}

//     virtual double progress() const { return m_progress; }
extern ADDAPI bool NERVA_DeviceProgress_progress(void* deviceProgress_ptr);
//     virtual bool indeterminate() const { return m_indeterminate; }
extern ADDAPI bool NERVA_DeviceProgress_indeterminate(void* deviceProgress_ptr);
//    };
//     virtual ~Wallet() = 0;
//     virtual std::string seed(const std::string& seed_offset = "") const = 0;
extern ADDAPI const char* NERVA_Wallet_seed(void* wallet_ptr);
//     virtual std::string getSeedLanguage() const = 0;
extern ADDAPI const char* NERVA_Wallet_getSeedLanguage(void* wallet_ptr);
//     virtual void setSeedLanguage(const std::string &arg) = 0;
extern ADDAPI void NERVA_Wallet_setSeedLanguage(void* wallet_ptr, const char* arg);
//     virtual int status() const = 0;
extern ADDAPI int NERVA_Wallet_status(void* wallet_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* NERVA_Wallet_errorString(void* wallet_ptr);
//     virtual void statusWithErrorString(int& status, std::string& errorString) const = 0;
//     virtual bool setPassword(const std::string &password) = 0;
extern ADDAPI bool NERVA_Wallet_setPassword(void* wallet_ptr, const char* password);
//     virtual const std::string& getPassword() const = 0;
//     virtual bool setDevicePin(const std::string &pin) { (void)pin; return false; };
extern ADDAPI bool NERVA_Wallet_setDevicePin(void* wallet_ptr, const char* pin);
//     virtual bool setDevicePassphrase(const std::string &passphrase) { (void)passphrase; return false; };
extern ADDAPI bool NERVA_Wallet_setDevicePassphrase(void* wallet_ptr, const char* passphrase);
//     virtual std::string address(uint32_t accountIndex = 0, uint32_t addressIndex = 0) const = 0;
extern ADDAPI const char* NERVA_Wallet_address(void* wallet_ptr, uint64_t accountIndex, uint64_t addressIndex);
//     std::string mainAddress() const { return address(0, 0); }
//     virtual std::string path() const = 0;
extern ADDAPI const char* NERVA_Wallet_path(void* wallet_ptr);
//     virtual NetworkType nettype() const = 0;
extern ADDAPI int NERVA_Wallet_nettype(void* wallet_ptr);
//     bool mainnet() const { return nettype() == MAINNET; }
//     bool testnet() const { return nettype() == TESTNET; }
//     bool stagenet() const { return nettype() == STAGENET; }
//     virtual void hardForkInfo(uint8_t &version, uint64_t &earliest_height) const = 0;
//     virtual bool useForkRules(uint8_t version, int64_t early_blocks) const = 0;
extern ADDAPI uint8_t NERVA_Wallet_useForkRules(void* wallet_ptr, uint8_t version, int64_t early_blocks);
//     virtual std::string integratedAddress(const std::string &payment_id) const = 0;
extern ADDAPI const char* NERVA_Wallet_integratedAddress(void* wallet_ptr, const char* payment_id);
//     virtual std::string secretViewKey() const = 0;
extern ADDAPI const char* NERVA_Wallet_secretViewKey(void* wallet_ptr);
//     virtual std::string publicViewKey() const = 0;
extern ADDAPI const char* NERVA_Wallet_publicViewKey(void* wallet_ptr);