impls/monero.dart/lib/src/generated_bindings_nerva.g.dart


  late final _NERVA_SubaddressAccount_addRowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_SubaddressAccount_addRow');
  late final _NERVA_SubaddressAccount_addRow =
      _NERVA_SubaddressAccount_addRowPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  void NERVA_SubaddressAccount_setLabel(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
    int accountIndex,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _NERVA_SubaddressAccount_setLabel(
      subaddressAccount_ptr,
      accountIndex,
      label,
    );
  }

  late final _NERVA_SubaddressAccount_setLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('NERVA_SubaddressAccount_setLabel');
  late final _NERVA_SubaddressAccount_setLabel =
      _NERVA_SubaddressAccount_setLabelPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  void NERVA_SubaddressAccount_refresh(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
  ) {
    return _NERVA_SubaddressAccount_refresh(
      subaddressAccount_ptr,
    );
  }

  late final _NERVA_SubaddressAccount_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_SubaddressAccount_refresh');
  late final _NERVA_SubaddressAccount_refresh =
      _NERVA_SubaddressAccount_refreshPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_MultisigState_isMultisig(
    ffi.Pointer<ffi.Void> multisigState_ptr,
  ) {
    return _NERVA_MultisigState_isMultisig(
      multisigState_ptr,
    );
  }

  late final _NERVA_MultisigState_isMultisigPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_MultisigState_isMultisig');
  late final _NERVA_MultisigState_isMultisig =
      _NERVA_MultisigState_isMultisigPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_MultisigState_isReady(
    ffi.Pointer<ffi.Void> multisigState_ptr,
  ) {
    return _NERVA_MultisigState_isReady(
      multisigState_ptr,
    );
  }

  late final _NERVA_MultisigState_isReadyPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_MultisigState_isReady');
  late final _NERVA_MultisigState_isReady = _NERVA_MultisigState_isReadyPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_MultisigState_threshold(
    ffi.Pointer<ffi.Void> multisigState_ptr,
  ) {
    return _NERVA_MultisigState_threshold(
      multisigState_ptr,
    );
  }

  late final _NERVA_MultisigState_thresholdPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_MultisigState_threshold');
  late final _NERVA_MultisigState_threshold = _NERVA_MultisigState_thresholdPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_MultisigState_total(
    ffi.Pointer<ffi.Void> multisigState_ptr,
  ) {
    return _NERVA_MultisigState_total(
      multisigState_ptr,
    );
  }

  late final _NERVA_MultisigState_totalPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_MultisigState_total');
  late final _NERVA_MultisigState_total = _NERVA_MultisigState_totalPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_DeviceProgress_progress(
    ffi.Pointer<ffi.Void> deviceProgress_ptr,
  ) {
    return _NERVA_DeviceProgress_progress(
      deviceProgress_ptr,
    );
  }

  late final _NERVA_DeviceProgress_progressPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_DeviceProgress_progress');
  late final _NERVA_DeviceProgress_progress = _NERVA_DeviceProgress_progressPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_DeviceProgress_indeterminate(
    ffi.Pointer<ffi.Void> deviceProgress_ptr,
  ) {
    return _NERVA_DeviceProgress_indeterminate(
      deviceProgress_ptr,
    );
  }

  late final _NERVA_DeviceProgress_indeterminatePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_DeviceProgress_indeterminate');
  late final _NERVA_DeviceProgress_indeterminate =
      _NERVA_DeviceProgress_indeterminatePtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_seed(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_seed(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_seedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_seed');
  late final _NERVA_Wallet_seed = _NERVA_Wallet_seedPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_getSeedLanguage(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_getSeedLanguage(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_getSeedLanguagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_getSeedLanguage');
  late final _NERVA_Wallet_getSeedLanguage = _NERVA_Wallet_getSeedLanguagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_setSeedLanguage(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> arg,
  ) {
    return _NERVA_Wallet_setSeedLanguage(
      wallet_ptr,
      arg,
    );
  }

  late final _NERVA_Wallet_setSeedLanguagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_setSeedLanguage');
  late final _NERVA_Wallet_setSeedLanguage =
      _NERVA_Wallet_setSeedLanguagePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int NERVA_Wallet_status(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_status(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_status');
  late final _NERVA_Wallet_status =
      _NERVA_Wallet_statusPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_errorString(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_errorString(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_errorStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_errorString');
  late final _NERVA_Wallet_errorString = _NERVA_Wallet_errorStringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_Wallet_setPassword(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _NERVA_Wallet_setPassword(
      wallet_ptr,
      password,
    );
  }

  late final _NERVA_Wallet_setPasswordPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_setPassword');
  late final _NERVA_Wallet_setPassword =
      _NERVA_Wallet_setPasswordPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_setDevicePin(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> pin,
  ) {
    return _NERVA_Wallet_setDevicePin(
      wallet_ptr,
      pin,
    );
  }

  late final _NERVA_Wallet_setDevicePinPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_setDevicePin');
  late final _NERVA_Wallet_setDevicePin =
      _NERVA_Wallet_setDevicePinPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_setDevicePassphrase(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> passphrase,
  ) {
    return _NERVA_Wallet_setDevicePassphrase(
      wallet_ptr,
      passphrase,
    );
  }

  late final _NERVA_Wallet_setDevicePassphrasePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_setDevicePassphrase');
  late final _NERVA_Wallet_setDevicePassphrase =
      _NERVA_Wallet_setDevicePassphrasePtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_address(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int accountIndex,
    int addressIndex,
  ) {
    return _NERVA_Wallet_address(
      wallet_ptr,
      accountIndex,
      addressIndex,
    );
  }

  late final _NERVA_Wallet_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, ffi.Uint64,
              ffi.Uint64)>>('NERVA_Wallet_address');
  late final _NERVA_Wallet_address = _NERVA_Wallet_addressPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int, int)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_path(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_path(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_pathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_path');
  late final _NERVA_Wallet_path = _NERVA_Wallet_pathPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_nettype(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_nettype(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_nettypePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_nettype');
  late final _NERVA_Wallet_nettype = _NERVA_Wallet_nettypePtr.asFunction<
      int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_useForkRules(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int version,
    int early_blocks,
  ) {
    return _NERVA_Wallet_useForkRules(
      wallet_ptr,
      version,
      early_blocks,
    );
  }

  late final _NERVA_Wallet_useForkRulesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(ffi.Pointer<ffi.Void>, ffi.Uint8,
              ffi.Int64)>>('NERVA_Wallet_useForkRules');
  late final _NERVA_Wallet_useForkRules = _NERVA_Wallet_useForkRulesPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_integratedAddress(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> payment_id,
  ) {
    return _NERVA_Wallet_integratedAddress(
      wallet_ptr,
      payment_id,
    );
  }

  late final _NERVA_Wallet_integratedAddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('NERVA_Wallet_integratedAddress');
  late final _NERVA_Wallet_integratedAddress =
      _NERVA_Wallet_integratedAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_secretViewKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_secretViewKey(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_secretViewKeyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_Wallet_secretViewKey');
  late final _NERVA_Wallet_secretViewKey = _NERVA_Wallet_secretViewKeyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_publicViewKey(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_publicViewKey(
      wallet_ptr,
    );
  }
